@@ -526,7 +526,7 @@ class AddressGroup
 	/**
 	* @return Array list of all member objects, if some of them are groups, they are exploded and their members inserted
 	*/
-	public function & expand()
+	public function & expand($keepGroupsInList=false)
 	{
 		$ret = Array();
 
@@ -535,6 +535,8 @@ class AddressGroup
 			if( $object->isGroup() )
 			{
 				$ret = array_merge( $ret, $object->expand() );
+                if( $keepGroupsInList )
+                    $ret[] = $object;
 			}
 			else
 				$ret[] = $object;
